@@ -2,7 +2,9 @@ package com.familyspencesapi.controllers.expense;
 
 import com.familyspencesapi.domain.expense.Expense;
 import com.familyspencesapi.domain.expense.Expense.ExpenseCategory;
-import com.familyspencesapi.domain.family.FamilyMember;
+import com.familyspencesapi.domain.users.RegisterUser;
+import com.familyspencesapi.service.expense.ExpenseService;
+import com.familyspencesapi.service.users.RegisterUserService;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -20,123 +22,155 @@ import jakarta.validation.constraints.Pattern;
 
 import java.math.BigDecimal;
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/rest/expenses")
 @CrossOrigin(origins = "*")
 public class ExpenseController {
 
-    // Constantes para evitar duplicación de literales
-    private static final String ENERO_LITERAL = "enero";
-    private static final String ERROR_INTERNO_SERVIDOR = "Error interno del servidor: ";
+    private final ExpenseService expenseService;
+    private final RegisterUserService userService;
 
-    // Datos quemados - Miembros de familia
-    private static final Map<UUID, FamilyMember> FAMILY_MEMBERS = new ConcurrentHashMap<>();
-
-    // Datos quemados - Gastos
-    private static final Map<UUID, Expense> EXPENSES = new ConcurrentHashMap<>();
-
-    static {
-        // Inicializar miembros de familia
-        UUID familyId1 = UUID.fromString("550e8400-e29b-41d4-a716-446655440001");
-        UUID familyId2 = UUID.fromString("550e8400-e29b-41d4-a716-446655440002");
-        UUID familyId3 = UUID.fromString("550e8400-e29b-41d4-a716-446655440003");
-
-        FAMILY_MEMBERS.put(familyId1, new FamilyMember(familyId1, "Juan Pérez", "juan.perez@email.com", "Padre"));
-        FAMILY_MEMBERS.put(familyId2, new FamilyMember(familyId2, "María García", "maria.garcia@email.com", "Madre"));
-        FAMILY_MEMBERS.put(familyId3, new FamilyMember(familyId3, "Ana Pérez", "ana.perez@email.com", "Hija"));
-
-        // Inicializar gastos de ejemplo con categorías
-        UUID expenseId1 = UUID.fromString("660e8400-e29b-41d4-a716-446655440001");
-        UUID expenseId2 = UUID.fromString("660e8400-e29b-41d4-a716-446655440002");
-        UUID expenseId3 = UUID.fromString("660e8400-e29b-41d4-a716-446655440003");
-
-        EXPENSES.put(expenseId1, new Expense(
-                expenseId1, "Supermercado", "Compras mensuales del hogar", ENERO_LITERAL,
-                FAMILY_MEMBERS.get(familyId1), new BigDecimal("450.75"), ExpenseCategory.ALIMENTACION
-        ));
-
-        EXPENSES.put(expenseId2, new Expense(
-                expenseId2, "Gasolina", "Combustible para el vehículo", ENERO_LITERAL,
-                FAMILY_MEMBERS.get(familyId1), new BigDecimal("80.00"), ExpenseCategory.TRANSPORTE
-        ));
-
-        EXPENSES.put(expenseId3, new Expense(
-                expenseId3, "Material escolar", "Útiles para el colegio", ENERO_LITERAL,
-                FAMILY_MEMBERS.get(familyId2), new BigDecimal("120.50"), ExpenseCategory.EDUCACION
-        ));
+    // Constructor injection
+    public ExpenseController(ExpenseService expenseService, RegisterUserService userService) {
+        this.expenseService = expenseService;
+        this.userService = userService;
     }
 
+    // GET: api/v1/rest/expenses
     @GetMapping("")
     public ResponseEntity<List<Expense>> getAll() {
-        List<Expense> expenses = new ArrayList<>(EXPENSES.values());
-        return ResponseEntity.ok(expenses);
+        try {
+            List<Expense> expenses = expenseService.findAll();
+            return ResponseEntity.ok(expenses);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
     }
 
+    // GET: api/v1/rest/expenses/{id}
     @GetMapping("/{id}")
     public ResponseEntity<Expense> getById(@PathVariable UUID id) {
-        Expense expense = EXPENSES.get(id);
-        if (expense != null) {
-            return ResponseEntity.ok(expense);
+        try {
+            Optional<Expense> expense = expenseService.findById(id);
+            return expense.map(ResponseEntity::ok).orElse(ResponseEntity.notFound().build());
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
         }
-        return ResponseEntity.notFound().build();
     }
 
+    // GET: api/v1/rest/expenses/by-category/{category}
     @GetMapping("/by-category/{category}")
     public ResponseEntity<List<Expense>> getByCategory(@PathVariable ExpenseCategory category) {
-        List<Expense> expensesByCategory = EXPENSES.values().stream()
-                .filter(expense -> expense.getCategory() == category)
-                .toList();
-        return ResponseEntity.ok(expensesByCategory);
+        try {
+            List<Expense> expenses = expenseService.findByCategory(category);
+            return ResponseEntity.ok(expenses);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
     }
 
+    // GET: api/v1/rest/expenses/by-period/{period}
     @GetMapping("/by-period/{period}")
     public ResponseEntity<List<Expense>> getByPeriod(@PathVariable String period) {
-        List<Expense> expensesByPeriod = EXPENSES.values().stream()
-                .filter(expense -> expense.isSamePeriod(period))
-                .toList();
-        return ResponseEntity.ok(expensesByPeriod);
+        try {
+            List<Expense> expenses = expenseService.findByPeriod(period);
+            return ResponseEntity.ok(expenses);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
     }
 
+    // GET: api/v1/rest/expenses/by-family/{familyId}
+    @GetMapping("/by-family/{familyId}")
+    public ResponseEntity<List<Expense>> getByFamily(@PathVariable UUID familyId) {
+        try {
+            List<Expense> expenses = expenseService.findByResponsibleFamilyId(familyId);
+            return ResponseEntity.ok(expenses);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+    // GET: api/v1/rest/expenses/by-user/{userId}
+    @GetMapping("/by-user/{userId}")
+    public ResponseEntity<List<Expense>> getByUser(@PathVariable UUID userId) {
+        try {
+            List<Expense> expenses = expenseService.findByResponsibleId(userId);
+            return ResponseEntity.ok(expenses);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+    // GET: api/v1/rest/expenses/expensive
     @GetMapping("/expensive")
     public ResponseEntity<List<Expense>> getExpensiveExpenses() {
-        List<Expense> expensiveExpenses = EXPENSES.values().stream()
-                .filter(Expense::isExpensive)
-                .toList();
-        return ResponseEntity.ok(expensiveExpenses);
+        try {
+            List<Expense> expenses = expenseService.findExpensiveExpenses();
+            return ResponseEntity.ok(expenses);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
     }
 
+    // GET: api/v1/rest/expenses/total-by-period/{period}
     @GetMapping("/total-by-period/{period}")
     public ResponseEntity<TotalResponse> getTotalByPeriod(@PathVariable String period) {
-        BigDecimal total = EXPENSES.values().stream()
-                .filter(expense -> expense.isSamePeriod(period))
-                .map(Expense::getValue)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
-
-        return ResponseEntity.ok(new TotalResponse(period, total));
+        try {
+            BigDecimal total = expenseService.calculateTotalByPeriod(period);
+            return ResponseEntity.ok(new TotalResponse(period, total));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
     }
 
-    @PostMapping("")
-    public ResponseEntity<ApiResponse> create(@Valid @RequestBody ExpenseRequest request, BindingResult result) {
+    // GET: api/v1/rest/expenses/total-by-family/{familyId}/{period}
+    @GetMapping("/total-by-family/{familyId}/{period}")
+    public ResponseEntity<TotalResponse> getTotalByFamilyAndPeriod(
+            @PathVariable UUID familyId, @PathVariable String period) {
         try {
+            BigDecimal total = expenseService.calculateTotalByFamilyAndPeriod(familyId, period);
+            return ResponseEntity.ok(new TotalResponse(period, total));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+    // GET: api/v1/rest/expenses/statistics
+    @GetMapping("/statistics")
+    public ResponseEntity<ExpenseService.ExpenseStatistics> getStatistics() {
+        try {
+            ExpenseService.ExpenseStatistics stats = expenseService.getExpenseStatistics();
+            return ResponseEntity.ok(stats);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+    // POST: api/v1/rest/expenses
+    @PostMapping("")
+    public ResponseEntity<?> create(@Valid @RequestBody ExpenseRequest request, BindingResult result) {
+        try {
+            // Validar errores de binding
             if (result.hasErrors()) {
                 List<String> errors = result.getAllErrors().stream()
                         .map(error -> error.getDefaultMessage())
-                        .toList();
+                        .collect(Collectors.toList());
                 return ResponseEntity.badRequest()
                         .body(new ApiResponse("Errores de validación: " + String.join(", ", errors)));
             }
 
-            FamilyMember responsible = FAMILY_MEMBERS.get(request.getIdFamily());
-            if (responsible == null) {
+            // Verificar que el usuario existe
+            Optional<RegisterUser> userOpt = userService.findById(request.getUserId());
+            if (userOpt.isEmpty()) {
                 return ResponseEntity.badRequest()
-                        .body(new ApiResponse("Error: Miembro de familia no encontrado con ID: " + request.getIdFamily()));
+                        .body(new ApiResponse("Error: Usuario no encontrado con ID: " + request.getUserId()));
             }
 
-            UUID newId = UUID.randomUUID();
+            RegisterUser responsible = userOpt.get();
             Expense expense = new Expense(
-                    newId,
                     request.getTitle().trim(),
                     request.getDescription() != null ? request.getDescription().trim() : "",
                     request.getPeriod().trim(),
@@ -145,44 +179,54 @@ public class ExpenseController {
                     request.getCategory()
             );
 
+            // Validar período personalizado
             if (!expense.isValidPeriod()) {
                 return ResponseEntity.badRequest()
                         .body(new ApiResponse("Error: El período '" + request.getPeriod() + "' no es válido"));
             }
 
-            EXPENSES.put(newId, expense);
+            Expense savedExpense = expenseService.save(expense);
 
             return ResponseEntity.status(HttpStatus.CREATED)
-                    .body(new ApiResponse("Gasto registrado correctamente", newId.toString()));
+                    .body(new ApiResponse("Gasto registrado correctamente", savedExpense.getId().toString()));
 
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest()
+                    .body(new ApiResponse("Error de validación: " + e.getMessage()));
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ApiResponse(ERROR_INTERNO_SERVIDOR + e.getMessage()));
+                    .body(new ApiResponse("Error interno del servidor: " + e.getMessage()));
         }
     }
 
+    // PUT: api/v1/rest/expenses/{id}
     @PutMapping("/{id}")
-    public ResponseEntity<ApiResponse> update(@PathVariable UUID id, @Valid @RequestBody ExpenseRequest request, BindingResult result) {
+    public ResponseEntity<?> update(@PathVariable UUID id, @Valid @RequestBody ExpenseRequest request, BindingResult result) {
         try {
+            // Validar errores de binding
             if (result.hasErrors()) {
                 List<String> errors = result.getAllErrors().stream()
                         .map(error -> error.getDefaultMessage())
-                        .toList();
+                        .collect(Collectors.toList());
                 return ResponseEntity.badRequest()
                         .body(new ApiResponse("Errores de validación: " + String.join(", ", errors)));
             }
 
-            Expense expense = EXPENSES.get(id);
-            if (expense == null) {
+            Optional<Expense> expenseOpt = expenseService.findById(id);
+            if (expenseOpt.isEmpty()) {
                 return ResponseEntity.notFound().build();
             }
 
-            FamilyMember responsible = FAMILY_MEMBERS.get(request.getIdFamily());
-            if (responsible == null) {
+            Optional<RegisterUser> userOpt = userService.findById(request.getUserId());
+            if (userOpt.isEmpty()) {
                 return ResponseEntity.badRequest()
-                        .body(new ApiResponse("Error: Miembro de familia no encontrado con ID: " + request.getIdFamily()));
+                        .body(new ApiResponse("Error: Usuario no encontrado con ID: " + request.getUserId()));
             }
 
+            Expense expense = expenseOpt.get();
+            RegisterUser responsible = userOpt.get();
+
+            // Actualizar el gasto existente
             expense.setTitle(request.getTitle().trim());
             expense.setDescription(request.getDescription() != null ? request.getDescription().trim() : "");
             expense.setPeriod(request.getPeriod().trim());
@@ -190,51 +234,128 @@ public class ExpenseController {
             expense.setValue(request.getValue());
             expense.setCategory(request.getCategory());
 
+            // Validar período personalizado
             if (!expense.isValidPeriod()) {
                 return ResponseEntity.badRequest()
                         .body(new ApiResponse("Error: El período '" + request.getPeriod() + "' no es válido"));
             }
 
-            expense.updateTimestamp();
+            expenseService.save(expense);
 
             return ResponseEntity.ok(new ApiResponse("Gasto actualizado correctamente", id.toString()));
 
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest()
+                    .body(new ApiResponse("Error de validación: " + e.getMessage()));
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ApiResponse(ERROR_INTERNO_SERVIDOR + e.getMessage()));
+                    .body(new ApiResponse("Error interno del servidor: " + e.getMessage()));
         }
     }
 
+    // DELETE: api/v1/rest/expenses/{id}
     @DeleteMapping("/{id}")
-    public ResponseEntity<ApiResponse> delete(@PathVariable UUID id) {
+    public ResponseEntity<?> delete(@PathVariable UUID id) {
         try {
-            Expense expense = EXPENSES.remove(id);
-            if (expense != null) {
-                // 204 No Content, sin body
-                return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+            boolean deleted = expenseService.deleteById(id);
+            if (deleted) {
+                return ResponseEntity.ok(new ApiResponse("Gasto eliminado correctamente", id.toString()));
             }
-            // 404 con body explicativo
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(new ApiResponse("Gasto no encontrado con ID: " + id));
+            return ResponseEntity.notFound().build();
+
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(new ApiResponse(ERROR_INTERNO_SERVIDOR + e.getMessage()));
+                    .body(new ApiResponse("Error interno del servidor: " + e.getMessage()));
         }
     }
-    @GetMapping("/family-members")
-    public ResponseEntity<List<FamilyMember>> getFamilyMembers() {
-        List<FamilyMember> members = new ArrayList<>(FAMILY_MEMBERS.values());
-        return ResponseEntity.status(HttpStatus.OK).body(members);
+
+    // GET: api/v1/rest/expenses/users
+    @GetMapping("/users")
+    public ResponseEntity<List<UserInfo>> getUsers() {
+        try {
+            List<RegisterUser> users = userService.findAll();
+            List<UserInfo> userInfos = users.stream()
+                    .map(user -> new UserInfo(
+                            user.getId(),
+                            user.getfullName(),
+                            user.getEmail(),
+                            user.getRelationship().getName(),
+                            user.getFamilyId()
+                    ))
+                    .collect(Collectors.toList());
+            return ResponseEntity.ok(userInfos);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
     }
 
+    // GET: api/v1/rest/expenses/users/by-family/{familyId}
+    @GetMapping("/users/by-family/{familyId}")
+    public ResponseEntity<List<UserInfo>> getUsersByFamily(@PathVariable UUID familyId) {
+        try {
+            List<RegisterUser> users = userService.findByFamilyId(familyId);
+            List<UserInfo> userInfos = users.stream()
+                    .map(user -> new UserInfo(
+                            user.getId(),
+                            user.getfullName(),
+                            user.getEmail(),
+                            user.getRelationship().getName(),
+                            user.getFamilyId()
+                    ))
+                    .collect(Collectors.toList());
+            return ResponseEntity.ok(userInfos);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+    // GET: api/v1/rest/expenses/categories
     @GetMapping("/categories")
     public ResponseEntity<List<CategoryInfo>> getCategories() {
-        List<CategoryInfo> categories = Arrays.stream(ExpenseCategory.values())
-                .map(category -> new CategoryInfo(category.name(), category.getDisplayName()))
-                .toList();
-        return ResponseEntity.status(HttpStatus.OK).body(categories);
+        try {
+            List<CategoryInfo> categories = Arrays.stream(ExpenseCategory.values())
+                    .map(category -> new CategoryInfo(category.name(), category.getDisplayName()))
+                    .collect(Collectors.toList());
+            return ResponseEntity.ok(categories);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
     }
 
+    // GET: api/v1/rest/expenses/recent/{days}
+    @GetMapping("/recent/{days}")
+    public ResponseEntity<List<Expense>> getRecentExpenses(@PathVariable int days) {
+        try {
+            List<Expense> expenses = expenseService.getRecentExpenses(days);
+            return ResponseEntity.ok(expenses);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+    // GET: api/v1/rest/expenses/current-month
+    @GetMapping("/current-month")
+    public ResponseEntity<List<Expense>> getCurrentMonthExpenses() {
+        try {
+            List<Expense> expenses = expenseService.getCurrentMonthExpenses();
+            return ResponseEntity.ok(expenses);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+    // GET: api/v1/rest/expenses/top/{limit}
+    @GetMapping("/top/{limit}")
+    public ResponseEntity<List<Expense>> getTopExpenses(@PathVariable int limit) {
+        try {
+            List<Expense> expenses = expenseService.getTopExpensesByValue(limit);
+            return ResponseEntity.ok(expenses);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
+        }
+    }
+
+    // DTO para requests con validaciones mejoradas
     public static class ExpenseRequest {
         @NotBlank(message = "El título es obligatorio")
         @Size(min = 3, max = 100, message = "El título debe tener entre 3 y 100 caracteres")
@@ -248,8 +369,8 @@ public class ExpenseController {
                 message = "El período debe ser un mes válido en español o formato YYYY-MM")
         private String period;
 
-        @NotNull(message = "El ID del miembro de familia es obligatorio")
-        private UUID idFamily;
+        @NotNull(message = "El ID del usuario es obligatorio")
+        private UUID userId;
 
         @NotNull(message = "El valor es obligatorio")
         @DecimalMin(value = "0.01", message = "El valor debe ser mayor que 0")
@@ -260,18 +381,20 @@ public class ExpenseController {
         @NotNull(message = "La categoría es obligatoria")
         private ExpenseCategory category;
 
+        // Constructores
         public ExpenseRequest() {}
 
         public ExpenseRequest(String title, String description, String period,
-                              UUID idFamily, BigDecimal value, ExpenseCategory category) {
+                              UUID userId, BigDecimal value, ExpenseCategory category) {
             this.title = title;
             this.description = description;
             this.period = period;
-            this.idFamily = idFamily;
+            this.userId = userId;
             this.value = value;
             this.category = category;
         }
 
+        // Getters y Setters
         public String getTitle() { return title; }
         public void setTitle(String title) { this.title = title; }
 
@@ -281,8 +404,8 @@ public class ExpenseController {
         public String getPeriod() { return period; }
         public void setPeriod(String period) { this.period = period; }
 
-        public UUID getIdFamily() { return idFamily; }
-        public void setIdFamily(UUID idFamily) { this.idFamily = idFamily; }
+        public UUID getUserId() { return userId; }
+        public void setUserId(UUID userId) { this.userId = userId; }
 
         public BigDecimal getValue() { return value; }
         public void setValue(BigDecimal value) { this.value = value; }
@@ -291,6 +414,40 @@ public class ExpenseController {
         public void setCategory(ExpenseCategory category) { this.category = category; }
     }
 
+    // DTO para información de usuarios
+    public static class UserInfo {
+        private UUID id;
+        private String fullName;
+        private String email;
+        private String relationship;
+        private UUID familyId;
+
+        public UserInfo(UUID id, String fullName, String email, String relationship, UUID familyId) {
+            this.id = id;
+            this.fullName = fullName;
+            this.email = email;
+            this.relationship = relationship;
+            this.familyId = familyId;
+        }
+
+        // Getters y Setters
+        public UUID getId() { return id; }
+        public void setId(UUID id) { this.id = id; }
+
+        public String getFullName() { return fullName; }
+        public void setFullName(String fullName) { this.fullName = fullName; }
+
+        public String getEmail() { return email; }
+        public void setEmail(String email) { this.email = email; }
+
+        public String getRelationship() { return relationship; }
+        public void setRelationship(String relationship) { this.relationship = relationship; }
+
+        public UUID getFamilyId() { return familyId; }
+        public void setFamilyId(UUID familyId) { this.familyId = familyId; }
+    }
+
+    // DTO para responses
     public static class ApiResponse {
         private String mensaje;
         private String idExpense;
@@ -307,6 +464,7 @@ public class ExpenseController {
             this.timestamp = System.currentTimeMillis();
         }
 
+        // Getters y Setters
         public String getMensaje() { return mensaje; }
         public void setMensaje(String mensaje) { this.mensaje = mensaje; }
 
@@ -317,6 +475,7 @@ public class ExpenseController {
         public void setTimestamp(long timestamp) { this.timestamp = timestamp; }
     }
 
+    // DTO para información de categorías
     public static class CategoryInfo {
         private String code;
         private String displayName;
@@ -326,6 +485,7 @@ public class ExpenseController {
             this.displayName = displayName;
         }
 
+        // Getters y Setters
         public String getCode() { return code; }
         public void setCode(String code) { this.code = code; }
 
@@ -333,6 +493,7 @@ public class ExpenseController {
         public void setDisplayName(String displayName) { this.displayName = displayName; }
     }
 
+    // DTO para totales
     public static class TotalResponse {
         private String period;
         private BigDecimal total;
@@ -344,6 +505,7 @@ public class ExpenseController {
             this.formattedTotal = String.format("$%.2f", total);
         }
 
+        // Getters y Setters
         public String getPeriod() { return period; }
         public void setPeriod(String period) { this.period = period; }
 
